--- a/arch/arm/configs/re4son_pi1_defconfig
+++ b/arch/arm/configs/re4son_pi1_defconfig
@@ -1,6 +1,7 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_PHYS_OFFSET=0
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION="Re4son-Kali-Pi-TFT"
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_FHANDLE=y
