--- a/arch/arm/configs/re4son_pi2_defconfig
+++ b/arch/arm/configs/re4son_pi2_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_PHYS_OFFSET=0
-CONFIG_LOCALVERSION="-v7"
+CONFIG_LOCALVERSION="-v7_Re4son-Kali-Pi-TFT"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
