--- a/arch/arm/configs/re4son_pi2_defconfig
+++ b/arch/arm/configs/re4son_pi2_defconfig
@@ -2324,6 +2324,7 @@ CONFIG_SPI_MASTER=y
 #
 # CONFIG_SPI_ALTERA is not set
 CONFIG_SPI_BCM2835=m
+CONFIG_SPI_BCM2708=m
 CONFIG_SPI_BCM2835AUX=m
 # CONFIG_SPI_BITBANG is not set
 # CONFIG_SPI_CADENCE is not set
