--- a/arch/arm/configs/re4son_pi1_defconfig
+++ b/arch/arm/configs/re4son_pi1_defconfig
@@ -2276,6 +2276,7 @@ CONFIG_SPI_MASTER=y
 #
 # CONFIG_SPI_ALTERA is not set
 CONFIG_SPI_BCM2835=m
+CONFIG_SPI_BCM2708=m
 CONFIG_SPI_BCM2835AUX=m
 # CONFIG_SPI_BITBANG is not set
 # CONFIG_SPI_CADENCE is not set
