--- a/arch/arm/configs/re4son_pi2_defconfig
+++ b/arch/arm/configs/re4son_pi2_defconfig
@@ -2069,6 +2069,7 @@ CONFIG_TOUCHSCREEN_ADS7846=m
 # CONFIG_TOUCHSCREEN_EETI is not set
 CONFIG_TOUCHSCREEN_EGALAX=m
 CONFIG_TOUCHSCREEN_FT6236=m
+CONFIG_TOUCHSCREEN_FT6X06=m
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
 # CONFIG_TOUCHSCREEN_GOODIX is not set
 # CONFIG_TOUCHSCREEN_ILI210X is not set
