--- a/arch/arm/configs/re4son_pi2_defconfig
+++ b/arch/arm/configs/re4son_pi2_defconfig
@@ -2476,6 +2476,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_PDA_POWER is not set
 # CONFIG_GENERIC_ADC_BATTERY is not set
 # CONFIG_TEST_POWER is not set
+CONFIG_RPI_POWER_SWITCH=m
 CONFIG_BATTERY_DS2760=m
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
